tests/invalid_inputs/sema/pointer_plus_double.cpp
void f() {
	int *p;
        // error, pointer + double is invalid
	p + 3.14;
}

